# dma

./: .gitignore  CNAME  README.md  package-lock.json  package.json  package.json.bak  pyproject.toml  sw.js  sw.js.map  vercel.json  workbox-353570c4.js
.github/workflows/: ci.yml
desk/: package.json  vite.config.ts
desk/src/router/: index.js
dma/: .babelrc  __init__.py  hooks.py  install.py
dma/api/: __init__.py
dma/config/: desktop.py  docs.py
dma/public/frontend/: index.html  manifest.webmanifest  registerSW.js  sw.js  sw.js.map
dma/public/js/: dma.js
dma/public/manifest/: site.webmanifest
dma/utils/: test_utils.py
dma/www/: d.html  desk.html  dma.html
e2e/: global-setup.ts
e2e/core/: auth.spec.ts  i18n.spec.ts
e2e/desk/: user-profile.spec.ts
e2e/utils/: index.ts
frontend/: babel.config.js  capacitor.config.ts  components.d.ts  index.html  ionic.config.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.mts  vite.config.ts
frontend/dev-dist/: sw.js  sw.js.map  workbox-302896ff.js  workbox-302896ff.js.map  workbox-353570c4.js.map
frontend/public/: index.html
frontend/src/: App.vue  frappe-ui.d.ts  main.css  main.ts
frontend/src/components/: AppTypeahead.vue  AppTypeaheadCustom.vue  FormView.vue  Input.vue  ListView.vue  LoadingToSuccess.vue  PhotoAttach.vue
frontend/src/composables/: index.ts
frontend/src/data/: session-old.ts  session.ts  user.ts  userStore.ts
frontend/src/locales/: devices.ts  en.yaml  th.yaml
patches/: frappe-ui+0.1.121.patch  frappe-ui+0.1.126.patch
(+309 files in other folders)
